--- a/E-commerce-ASP/Views/Proprietaire/MyProducts.cshtml
+++ b/E-commerce-ASP/Views/Proprietaire/MyProducts.cshtml
@@ -146,6 +146,10 @@
             bottom: 16px;
             left: 0;
         }
+
+        .card-price {
+            width: 320px;
+        }
     </style>
     <br />
     <br />
@@ -158,11 +162,11 @@
     @foreach (var item in Model)
     {
 
-        <div class="col-lg-4">
+        <div class="col-lg-4 col-md-6 col-sm-6 col-12">
 
             <div class="card card-price" style="border-radius: 50px">
                 <div class="card-img">
-                    <a href="#">
+                    <a href="/Product/Index/@item.Id">
                         <img src="~/Uploads/@item.Image" class="img-responsive" style="width:360px;height:220px">
                         <div class="card-caption">
 
@@ -171,7 +175,7 @@
                 </div>
                 <div class="card-body">
                     <div class="lead text-center" style="color:rgba(0,0,0); font-weight:bold;">@item.Name</div>
-                    <div class="titre"> Carte de la Produit</div>
+                    <div>@item.Description</div>
                     <table class="table">
 
                         <tr><td style="font-weight: bold;">Prix</td><td class="price">@item.Price Dhs</td></tr>
@@ -186,7 +190,7 @@
 
                     </table>
 
-                    <div class="detailText">@Html.ActionLink("Voir les détails de Produit ", "Index", "Product", new { Id = item.Id }, null)</div>
+                    <div class="detailText">@Html.ActionLink("Voir les détails du produit ", "Index", "Product", new { Id = item.Id }, null)</div>
 
 
                 </div>
