--- a/E-commerce-ASP/Views/Proprietaire/AddProduct.cshtml
+++ b/E-commerce-ASP/Views/Proprietaire/AddProduct.cshtml
@@ -38,43 +38,51 @@
 
                             @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
-                            <div class="row">
-                                <div class="col-lg-6 col-12">
-                                    <div class="form-group">
-                                        @Html.LabelFor(m => m.Name, new { @class = "control-label" })
-                                        @Html.TextBoxFor(m => m.Name)
-                                        @Html.ValidationMessageFor(m => m.Name, "", new { @class = "text-danger" })
-                                    </div>
-                                </div>
-                                <div class="col-lg-6 col-12">
-                                    <div class="form-group">
-                                        @Html.LabelFor(m => m.Price, new { @class = "control-label" })
-                                        @Html.TextBoxFor(m => m.Price)
-                                        @Html.ValidationMessageFor(m => m.Price, "", new { @class = "text-danger" })
-                                    </div>
-                                </div>
-                                <div class="col-lg-6 col-12">
-                                    <div class="form-group">
-                                        @Html.LabelFor(m => m.Category, new { @class = "control-label" })
-                                        <br />
-                                        @Html.DropDownListFor(m => m.CategoryId, ViewBag.CategoryList as SelectList, "Selectioner Category", new { htmlAttributes = new { @class = "form-control" } })
-                                        @Html.ValidationMessageFor(model => model.CategoryId, "", new { @class = "text-danger" })
-                                    </div>
-                                </div>
-                                <div class="col-lg-6 col-12">
-                                    <div class="form-group">
-                                        <label>Choisissez une Image<span></span></label>
-                                        <input type="file" name="upload">
-                                    </div>
-                                </div>
-
-
-                                <div class="col-12">
-                                    <div class="form-group button">
-                                        <button type="submit" class="btn ">Add product</button>
-                                    </div>
-                                </div>
+                    <div class="row">
+                        <div class="col-lg-6 col-12">
+                            <div class="form-group">
+                                @Html.LabelFor(m => m.Name, new { @class = "control-label" })
+                                @Html.TextBoxFor(m => m.Name)
+                                @Html.ValidationMessageFor(m => m.Name, "", new { @class = "text-danger" })
                             </div>
+                        </div>
+                        <div class="col-lg-6 col-12">
+                            <div class="form-group">
+                                @Html.LabelFor(m => m.Price, new { @class = "control-label" })
+                                @Html.TextBoxFor(m => m.Price)
+                                @Html.ValidationMessageFor(m => m.Price, "", new { @class = "text-danger" })
+                            </div>
+                        </div>
+                        <div class="col-lg-6 col-12">
+                            <div class="form-group">
+                                @Html.LabelFor(m => m.Category, new { @class = "control-label" })
+                                <br />
+                                @Html.DropDownListFor(m => m.CategoryId, ViewBag.CategoryList as SelectList, "Selectioner Category", new { htmlAttributes = new { @class = "form-control" } })
+                                @Html.ValidationMessageFor(model => model.CategoryId, "", new { @class = "text-danger" })
+                            </div>
+                        </div>
+                        <div class="col-lg-6 col-12">
+                            <div class="form-group">
+                                <label>Choisissez une Image<span></span></label>
+                                <input type="file" name="upload">
+                            </div>
+                        </div>
+
+                        <div class="col-lg-6 col-12">
+                            <div class="form-group">
+                                @Html.LabelFor(m => m.Description, new { @class = "control-label" })
+                                @Html.TextAreaFor(m => m.Description)
+                                @Html.ValidationMessageFor(m => m.Price, "", new { @class = "text-danger" })
+                            </div>
+                        </div>
+
+
+                        <div class="col-12">
+                            <div class="form-group button">
+                                <button type="submit" class="btn ">Add product</button>
+                            </div>
+                        </div>
+                    </div>
 
 
                         }
